parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ASPAS
    COMMENT
    ERR_STRING
    FALSE
    GREATEROREQUAL
    LESSTHANOREQUAL
    OR
    TRUE

Grammar

Rule 0     S' -> programa_minipar
Rule 1     programa_minipar -> bloco_stmt
Rule 2     bloco_stmt -> bloco_SEQ
Rule 3     bloco_stmt -> bloco_PAR
Rule 4     bloco_stmt -> stmts
Rule 5     bloco_SEQ -> SEQ stmts
Rule 6     bloco_PAR -> PAR stmts
Rule 7     stmts -> stmt
Rule 8     stmts -> stmts stmt
Rule 9     stmt -> atribuicao
Rule 10    stmt -> comparacao
Rule 11    stmt -> IF LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
Rule 12    stmt -> IF LPAREN comparacao RPAREN LBRACE stmt RBRACE
Rule 13    stmt -> IF LPAREN BOOLEAN RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
Rule 14    stmt -> IF LPAREN comparacao RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
Rule 15    single_stmt -> atribuicao
Rule 16    single_stmt -> comparacao
Rule 17    stmt -> WHILE LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
Rule 18    stmt -> WHILE LPAREN comparacao RPAREN LBRACE stmt RBRACE
Rule 19    atribuicao -> ID EQUAL expr
Rule 20    comparacao -> expr LESSTHAN expr
Rule 21    comparacao -> expr GREATERTHAN expr
Rule 22    comparacao -> expr NOTEQUAL expr
Rule 23    expr -> c_channel
Rule 24    expr -> ID
Rule 25    expr -> NUMBER
Rule 26    expr -> operacao
Rule 27    expr -> BOOLEAN
Rule 28    expr -> STRING
Rule 29    expr -> LPAREN expr RPAREN
Rule 30    expr -> LPAREN c_channel RPAREN
Rule 31    operacao -> adicao
Rule 32    operacao -> subtracao
Rule 33    operacao -> multiplicacao
Rule 34    operacao -> divisao
Rule 35    adicao -> NUMBER PLUS NUMBER
Rule 36    adicao -> ID PLUS ID
Rule 37    adicao -> ID PLUS NUMBER
Rule 38    subtracao -> NUMBER MINUS NUMBER
Rule 39    multiplicacao -> NUMBER TIMES NUMBER
Rule 40    divisao -> NUMBER DIVIDE NUMBER
Rule 41    c_channel -> CHAN ID : ID , ID

Terminals, with rules where they appear

,                    : 41
:                    : 41
AND                  : 
ASPAS                : 
BOOLEAN              : 11 13 17 27
CHAN                 : 41
COMMENT              : 
DIVIDE               : 40
ELSE                 : 13 14
EQUAL                : 19
ERR_STRING           : 
FALSE                : 
GREATEROREQUAL       : 
GREATERTHAN          : 21
ID                   : 19 24 36 36 37 41 41 41
IF                   : 11 12 13 14
LBRACE               : 11 12 13 13 14 14 17 18
LESSTHAN             : 20
LESSTHANOREQUAL      : 
LPAREN               : 11 12 13 14 17 18 29 30
MINUS                : 38
NOTEQUAL             : 22
NUMBER               : 25 35 35 37 38 38 39 39 40 40
OR                   : 
PAR                  : 6
PLUS                 : 35 36 37
RBRACE               : 11 12 13 13 14 14 17 18
RPAREN               : 11 12 13 14 17 18 29 30
SEQ                  : 5
STRING               : 28
TIMES                : 39
TRUE                 : 
WHILE                : 17 18
error                : 

Nonterminals, with rules where they appear

adicao               : 31
atribuicao           : 9 15
bloco_PAR            : 3
bloco_SEQ            : 2
bloco_stmt           : 1
c_channel            : 23 30
comparacao           : 10 12 14 16 18
divisao              : 34
expr                 : 19 20 20 21 21 22 22 29
multiplicacao        : 33
operacao             : 26
programa_minipar     : 0
single_stmt          : 13 13 14 14
stmt                 : 7 8 11 12 17 18
stmts                : 4 5 6 8
subtracao            : 32

Parsing method: LALR

state 0

    (0) S' -> . programa_minipar
    (1) programa_minipar -> . bloco_stmt
    (2) bloco_stmt -> . bloco_SEQ
    (3) bloco_stmt -> . bloco_PAR
    (4) bloco_stmt -> . stmts
    (5) bloco_SEQ -> . SEQ stmts
    (6) bloco_PAR -> . PAR stmts
    (7) stmts -> . stmt
    (8) stmts -> . stmts stmt
    (9) stmt -> . atribuicao
    (10) stmt -> . comparacao
    (11) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (12) stmt -> . IF LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (13) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (14) stmt -> . IF LPAREN comparacao RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (17) stmt -> . WHILE LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (18) stmt -> . WHILE LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (19) atribuicao -> . ID EQUAL expr
    (20) comparacao -> . expr LESSTHAN expr
    (21) comparacao -> . expr GREATERTHAN expr
    (22) comparacao -> . expr NOTEQUAL expr
    (23) expr -> . c_channel
    (24) expr -> . ID
    (25) expr -> . NUMBER
    (26) expr -> . operacao
    (27) expr -> . BOOLEAN
    (28) expr -> . STRING
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . LPAREN c_channel RPAREN
    (41) c_channel -> . CHAN ID : ID , ID
    (31) operacao -> . adicao
    (32) operacao -> . subtracao
    (33) operacao -> . multiplicacao
    (34) operacao -> . divisao
    (35) adicao -> . NUMBER PLUS NUMBER
    (36) adicao -> . ID PLUS ID
    (37) adicao -> . ID PLUS NUMBER
    (38) subtracao -> . NUMBER MINUS NUMBER
    (39) multiplicacao -> . NUMBER TIMES NUMBER
    (40) divisao -> . NUMBER DIVIDE NUMBER

    SEQ             shift and go to state 6
    PAR             shift and go to state 7
    IF              shift and go to state 11
    WHILE           shift and go to state 14
    ID              shift and go to state 15
    NUMBER          shift and go to state 18
    BOOLEAN         shift and go to state 13
    STRING          shift and go to state 20
    LPAREN          shift and go to state 12
    CHAN            shift and go to state 21

    programa_minipar               shift and go to state 1
    bloco_stmt                     shift and go to state 2
    bloco_SEQ                      shift and go to state 3
    bloco_PAR                      shift and go to state 4
    stmts                          shift and go to state 5
    stmt                           shift and go to state 8
    atribuicao                     shift and go to state 9
    comparacao                     shift and go to state 10
    expr                           shift and go to state 16
    c_channel                      shift and go to state 17
    operacao                       shift and go to state 19
    adicao                         shift and go to state 22
    subtracao                      shift and go to state 23
    multiplicacao                  shift and go to state 24
    divisao                        shift and go to state 25

state 1

    (0) S' -> programa_minipar .



state 2

    (1) programa_minipar -> bloco_stmt .

    $end            reduce using rule 1 (programa_minipar -> bloco_stmt .)


state 3

    (2) bloco_stmt -> bloco_SEQ .

    $end            reduce using rule 2 (bloco_stmt -> bloco_SEQ .)


state 4

    (3) bloco_stmt -> bloco_PAR .

    $end            reduce using rule 3 (bloco_stmt -> bloco_PAR .)


state 5

    (4) bloco_stmt -> stmts .
    (8) stmts -> stmts . stmt
    (9) stmt -> . atribuicao
    (10) stmt -> . comparacao
    (11) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (12) stmt -> . IF LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (13) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (14) stmt -> . IF LPAREN comparacao RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (17) stmt -> . WHILE LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (18) stmt -> . WHILE LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (19) atribuicao -> . ID EQUAL expr
    (20) comparacao -> . expr LESSTHAN expr
    (21) comparacao -> . expr GREATERTHAN expr
    (22) comparacao -> . expr NOTEQUAL expr
    (23) expr -> . c_channel
    (24) expr -> . ID
    (25) expr -> . NUMBER
    (26) expr -> . operacao
    (27) expr -> . BOOLEAN
    (28) expr -> . STRING
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . LPAREN c_channel RPAREN
    (41) c_channel -> . CHAN ID : ID , ID
    (31) operacao -> . adicao
    (32) operacao -> . subtracao
    (33) operacao -> . multiplicacao
    (34) operacao -> . divisao
    (35) adicao -> . NUMBER PLUS NUMBER
    (36) adicao -> . ID PLUS ID
    (37) adicao -> . ID PLUS NUMBER
    (38) subtracao -> . NUMBER MINUS NUMBER
    (39) multiplicacao -> . NUMBER TIMES NUMBER
    (40) divisao -> . NUMBER DIVIDE NUMBER

    $end            reduce using rule 4 (bloco_stmt -> stmts .)
    IF              shift and go to state 11
    WHILE           shift and go to state 14
    ID              shift and go to state 15
    NUMBER          shift and go to state 18
    BOOLEAN         shift and go to state 13
    STRING          shift and go to state 20
    LPAREN          shift and go to state 12
    CHAN            shift and go to state 21

    stmt                           shift and go to state 26
    atribuicao                     shift and go to state 9
    comparacao                     shift and go to state 10
    expr                           shift and go to state 16
    c_channel                      shift and go to state 17
    operacao                       shift and go to state 19
    adicao                         shift and go to state 22
    subtracao                      shift and go to state 23
    multiplicacao                  shift and go to state 24
    divisao                        shift and go to state 25

state 6

    (5) bloco_SEQ -> SEQ . stmts
    (7) stmts -> . stmt
    (8) stmts -> . stmts stmt
    (9) stmt -> . atribuicao
    (10) stmt -> . comparacao
    (11) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (12) stmt -> . IF LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (13) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (14) stmt -> . IF LPAREN comparacao RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (17) stmt -> . WHILE LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (18) stmt -> . WHILE LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (19) atribuicao -> . ID EQUAL expr
    (20) comparacao -> . expr LESSTHAN expr
    (21) comparacao -> . expr GREATERTHAN expr
    (22) comparacao -> . expr NOTEQUAL expr
    (23) expr -> . c_channel
    (24) expr -> . ID
    (25) expr -> . NUMBER
    (26) expr -> . operacao
    (27) expr -> . BOOLEAN
    (28) expr -> . STRING
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . LPAREN c_channel RPAREN
    (41) c_channel -> . CHAN ID : ID , ID
    (31) operacao -> . adicao
    (32) operacao -> . subtracao
    (33) operacao -> . multiplicacao
    (34) operacao -> . divisao
    (35) adicao -> . NUMBER PLUS NUMBER
    (36) adicao -> . ID PLUS ID
    (37) adicao -> . ID PLUS NUMBER
    (38) subtracao -> . NUMBER MINUS NUMBER
    (39) multiplicacao -> . NUMBER TIMES NUMBER
    (40) divisao -> . NUMBER DIVIDE NUMBER

    IF              shift and go to state 11
    WHILE           shift and go to state 14
    ID              shift and go to state 15
    NUMBER          shift and go to state 18
    BOOLEAN         shift and go to state 13
    STRING          shift and go to state 20
    LPAREN          shift and go to state 12
    CHAN            shift and go to state 21

    stmts                          shift and go to state 27
    stmt                           shift and go to state 8
    atribuicao                     shift and go to state 9
    comparacao                     shift and go to state 10
    expr                           shift and go to state 16
    c_channel                      shift and go to state 17
    operacao                       shift and go to state 19
    adicao                         shift and go to state 22
    subtracao                      shift and go to state 23
    multiplicacao                  shift and go to state 24
    divisao                        shift and go to state 25

state 7

    (6) bloco_PAR -> PAR . stmts
    (7) stmts -> . stmt
    (8) stmts -> . stmts stmt
    (9) stmt -> . atribuicao
    (10) stmt -> . comparacao
    (11) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (12) stmt -> . IF LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (13) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (14) stmt -> . IF LPAREN comparacao RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (17) stmt -> . WHILE LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (18) stmt -> . WHILE LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (19) atribuicao -> . ID EQUAL expr
    (20) comparacao -> . expr LESSTHAN expr
    (21) comparacao -> . expr GREATERTHAN expr
    (22) comparacao -> . expr NOTEQUAL expr
    (23) expr -> . c_channel
    (24) expr -> . ID
    (25) expr -> . NUMBER
    (26) expr -> . operacao
    (27) expr -> . BOOLEAN
    (28) expr -> . STRING
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . LPAREN c_channel RPAREN
    (41) c_channel -> . CHAN ID : ID , ID
    (31) operacao -> . adicao
    (32) operacao -> . subtracao
    (33) operacao -> . multiplicacao
    (34) operacao -> . divisao
    (35) adicao -> . NUMBER PLUS NUMBER
    (36) adicao -> . ID PLUS ID
    (37) adicao -> . ID PLUS NUMBER
    (38) subtracao -> . NUMBER MINUS NUMBER
    (39) multiplicacao -> . NUMBER TIMES NUMBER
    (40) divisao -> . NUMBER DIVIDE NUMBER

    IF              shift and go to state 11
    WHILE           shift and go to state 14
    ID              shift and go to state 15
    NUMBER          shift and go to state 18
    BOOLEAN         shift and go to state 13
    STRING          shift and go to state 20
    LPAREN          shift and go to state 12
    CHAN            shift and go to state 21

    stmts                          shift and go to state 28
    stmt                           shift and go to state 8
    atribuicao                     shift and go to state 9
    comparacao                     shift and go to state 10
    expr                           shift and go to state 16
    c_channel                      shift and go to state 17
    operacao                       shift and go to state 19
    adicao                         shift and go to state 22
    subtracao                      shift and go to state 23
    multiplicacao                  shift and go to state 24
    divisao                        shift and go to state 25

state 8

    (7) stmts -> stmt .

    IF              reduce using rule 7 (stmts -> stmt .)
    WHILE           reduce using rule 7 (stmts -> stmt .)
    ID              reduce using rule 7 (stmts -> stmt .)
    NUMBER          reduce using rule 7 (stmts -> stmt .)
    BOOLEAN         reduce using rule 7 (stmts -> stmt .)
    STRING          reduce using rule 7 (stmts -> stmt .)
    LPAREN          reduce using rule 7 (stmts -> stmt .)
    CHAN            reduce using rule 7 (stmts -> stmt .)
    $end            reduce using rule 7 (stmts -> stmt .)


state 9

    (9) stmt -> atribuicao .

    IF              reduce using rule 9 (stmt -> atribuicao .)
    WHILE           reduce using rule 9 (stmt -> atribuicao .)
    ID              reduce using rule 9 (stmt -> atribuicao .)
    NUMBER          reduce using rule 9 (stmt -> atribuicao .)
    BOOLEAN         reduce using rule 9 (stmt -> atribuicao .)
    STRING          reduce using rule 9 (stmt -> atribuicao .)
    LPAREN          reduce using rule 9 (stmt -> atribuicao .)
    CHAN            reduce using rule 9 (stmt -> atribuicao .)
    $end            reduce using rule 9 (stmt -> atribuicao .)
    RBRACE          reduce using rule 9 (stmt -> atribuicao .)


state 10

    (10) stmt -> comparacao .

    IF              reduce using rule 10 (stmt -> comparacao .)
    WHILE           reduce using rule 10 (stmt -> comparacao .)
    ID              reduce using rule 10 (stmt -> comparacao .)
    NUMBER          reduce using rule 10 (stmt -> comparacao .)
    BOOLEAN         reduce using rule 10 (stmt -> comparacao .)
    STRING          reduce using rule 10 (stmt -> comparacao .)
    LPAREN          reduce using rule 10 (stmt -> comparacao .)
    CHAN            reduce using rule 10 (stmt -> comparacao .)
    $end            reduce using rule 10 (stmt -> comparacao .)
    RBRACE          reduce using rule 10 (stmt -> comparacao .)


state 11

    (11) stmt -> IF . LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (12) stmt -> IF . LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (13) stmt -> IF . LPAREN BOOLEAN RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (14) stmt -> IF . LPAREN comparacao RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE

    LPAREN          shift and go to state 29


state 12

    (29) expr -> LPAREN . expr RPAREN
    (30) expr -> LPAREN . c_channel RPAREN
    (23) expr -> . c_channel
    (24) expr -> . ID
    (25) expr -> . NUMBER
    (26) expr -> . operacao
    (27) expr -> . BOOLEAN
    (28) expr -> . STRING
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . LPAREN c_channel RPAREN
    (41) c_channel -> . CHAN ID : ID , ID
    (31) operacao -> . adicao
    (32) operacao -> . subtracao
    (33) operacao -> . multiplicacao
    (34) operacao -> . divisao
    (35) adicao -> . NUMBER PLUS NUMBER
    (36) adicao -> . ID PLUS ID
    (37) adicao -> . ID PLUS NUMBER
    (38) subtracao -> . NUMBER MINUS NUMBER
    (39) multiplicacao -> . NUMBER TIMES NUMBER
    (40) divisao -> . NUMBER DIVIDE NUMBER

    ID              shift and go to state 32
    NUMBER          shift and go to state 18
    BOOLEAN         shift and go to state 13
    STRING          shift and go to state 20
    LPAREN          shift and go to state 12
    CHAN            shift and go to state 21

    expr                           shift and go to state 30
    c_channel                      shift and go to state 31
    operacao                       shift and go to state 19
    adicao                         shift and go to state 22
    subtracao                      shift and go to state 23
    multiplicacao                  shift and go to state 24
    divisao                        shift and go to state 25

state 13

    (27) expr -> BOOLEAN .

    LESSTHAN        reduce using rule 27 (expr -> BOOLEAN .)
    GREATERTHAN     reduce using rule 27 (expr -> BOOLEAN .)
    NOTEQUAL        reduce using rule 27 (expr -> BOOLEAN .)
    RPAREN          reduce using rule 27 (expr -> BOOLEAN .)
    IF              reduce using rule 27 (expr -> BOOLEAN .)
    WHILE           reduce using rule 27 (expr -> BOOLEAN .)
    ID              reduce using rule 27 (expr -> BOOLEAN .)
    NUMBER          reduce using rule 27 (expr -> BOOLEAN .)
    BOOLEAN         reduce using rule 27 (expr -> BOOLEAN .)
    STRING          reduce using rule 27 (expr -> BOOLEAN .)
    LPAREN          reduce using rule 27 (expr -> BOOLEAN .)
    CHAN            reduce using rule 27 (expr -> BOOLEAN .)
    $end            reduce using rule 27 (expr -> BOOLEAN .)
    RBRACE          reduce using rule 27 (expr -> BOOLEAN .)


state 14

    (17) stmt -> WHILE . LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (18) stmt -> WHILE . LPAREN comparacao RPAREN LBRACE stmt RBRACE

    LPAREN          shift and go to state 33


state 15

    (19) atribuicao -> ID . EQUAL expr
    (24) expr -> ID .
    (36) adicao -> ID . PLUS ID
    (37) adicao -> ID . PLUS NUMBER

    EQUAL           shift and go to state 34
    LESSTHAN        reduce using rule 24 (expr -> ID .)
    GREATERTHAN     reduce using rule 24 (expr -> ID .)
    NOTEQUAL        reduce using rule 24 (expr -> ID .)
    PLUS            shift and go to state 35


state 16

    (20) comparacao -> expr . LESSTHAN expr
    (21) comparacao -> expr . GREATERTHAN expr
    (22) comparacao -> expr . NOTEQUAL expr

    LESSTHAN        shift and go to state 36
    GREATERTHAN     shift and go to state 37
    NOTEQUAL        shift and go to state 38


state 17

    (23) expr -> c_channel .

    LESSTHAN        reduce using rule 23 (expr -> c_channel .)
    GREATERTHAN     reduce using rule 23 (expr -> c_channel .)
    NOTEQUAL        reduce using rule 23 (expr -> c_channel .)
    IF              reduce using rule 23 (expr -> c_channel .)
    WHILE           reduce using rule 23 (expr -> c_channel .)
    ID              reduce using rule 23 (expr -> c_channel .)
    NUMBER          reduce using rule 23 (expr -> c_channel .)
    BOOLEAN         reduce using rule 23 (expr -> c_channel .)
    STRING          reduce using rule 23 (expr -> c_channel .)
    LPAREN          reduce using rule 23 (expr -> c_channel .)
    CHAN            reduce using rule 23 (expr -> c_channel .)
    $end            reduce using rule 23 (expr -> c_channel .)
    RBRACE          reduce using rule 23 (expr -> c_channel .)
    RPAREN          reduce using rule 23 (expr -> c_channel .)


state 18

    (25) expr -> NUMBER .
    (35) adicao -> NUMBER . PLUS NUMBER
    (38) subtracao -> NUMBER . MINUS NUMBER
    (39) multiplicacao -> NUMBER . TIMES NUMBER
    (40) divisao -> NUMBER . DIVIDE NUMBER

    LESSTHAN        reduce using rule 25 (expr -> NUMBER .)
    GREATERTHAN     reduce using rule 25 (expr -> NUMBER .)
    NOTEQUAL        reduce using rule 25 (expr -> NUMBER .)
    RPAREN          reduce using rule 25 (expr -> NUMBER .)
    IF              reduce using rule 25 (expr -> NUMBER .)
    WHILE           reduce using rule 25 (expr -> NUMBER .)
    ID              reduce using rule 25 (expr -> NUMBER .)
    NUMBER          reduce using rule 25 (expr -> NUMBER .)
    BOOLEAN         reduce using rule 25 (expr -> NUMBER .)
    STRING          reduce using rule 25 (expr -> NUMBER .)
    LPAREN          reduce using rule 25 (expr -> NUMBER .)
    CHAN            reduce using rule 25 (expr -> NUMBER .)
    $end            reduce using rule 25 (expr -> NUMBER .)
    RBRACE          reduce using rule 25 (expr -> NUMBER .)
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    TIMES           shift and go to state 41
    DIVIDE          shift and go to state 42


state 19

    (26) expr -> operacao .

    LESSTHAN        reduce using rule 26 (expr -> operacao .)
    GREATERTHAN     reduce using rule 26 (expr -> operacao .)
    NOTEQUAL        reduce using rule 26 (expr -> operacao .)
    RPAREN          reduce using rule 26 (expr -> operacao .)
    IF              reduce using rule 26 (expr -> operacao .)
    WHILE           reduce using rule 26 (expr -> operacao .)
    ID              reduce using rule 26 (expr -> operacao .)
    NUMBER          reduce using rule 26 (expr -> operacao .)
    BOOLEAN         reduce using rule 26 (expr -> operacao .)
    STRING          reduce using rule 26 (expr -> operacao .)
    LPAREN          reduce using rule 26 (expr -> operacao .)
    CHAN            reduce using rule 26 (expr -> operacao .)
    $end            reduce using rule 26 (expr -> operacao .)
    RBRACE          reduce using rule 26 (expr -> operacao .)


state 20

    (28) expr -> STRING .

    LESSTHAN        reduce using rule 28 (expr -> STRING .)
    GREATERTHAN     reduce using rule 28 (expr -> STRING .)
    NOTEQUAL        reduce using rule 28 (expr -> STRING .)
    RPAREN          reduce using rule 28 (expr -> STRING .)
    IF              reduce using rule 28 (expr -> STRING .)
    WHILE           reduce using rule 28 (expr -> STRING .)
    ID              reduce using rule 28 (expr -> STRING .)
    NUMBER          reduce using rule 28 (expr -> STRING .)
    BOOLEAN         reduce using rule 28 (expr -> STRING .)
    STRING          reduce using rule 28 (expr -> STRING .)
    LPAREN          reduce using rule 28 (expr -> STRING .)
    CHAN            reduce using rule 28 (expr -> STRING .)
    $end            reduce using rule 28 (expr -> STRING .)
    RBRACE          reduce using rule 28 (expr -> STRING .)


state 21

    (41) c_channel -> CHAN . ID : ID , ID

    ID              shift and go to state 43


state 22

    (31) operacao -> adicao .

    LESSTHAN        reduce using rule 31 (operacao -> adicao .)
    GREATERTHAN     reduce using rule 31 (operacao -> adicao .)
    NOTEQUAL        reduce using rule 31 (operacao -> adicao .)
    RPAREN          reduce using rule 31 (operacao -> adicao .)
    IF              reduce using rule 31 (operacao -> adicao .)
    WHILE           reduce using rule 31 (operacao -> adicao .)
    ID              reduce using rule 31 (operacao -> adicao .)
    NUMBER          reduce using rule 31 (operacao -> adicao .)
    BOOLEAN         reduce using rule 31 (operacao -> adicao .)
    STRING          reduce using rule 31 (operacao -> adicao .)
    LPAREN          reduce using rule 31 (operacao -> adicao .)
    CHAN            reduce using rule 31 (operacao -> adicao .)
    $end            reduce using rule 31 (operacao -> adicao .)
    RBRACE          reduce using rule 31 (operacao -> adicao .)


state 23

    (32) operacao -> subtracao .

    LESSTHAN        reduce using rule 32 (operacao -> subtracao .)
    GREATERTHAN     reduce using rule 32 (operacao -> subtracao .)
    NOTEQUAL        reduce using rule 32 (operacao -> subtracao .)
    RPAREN          reduce using rule 32 (operacao -> subtracao .)
    IF              reduce using rule 32 (operacao -> subtracao .)
    WHILE           reduce using rule 32 (operacao -> subtracao .)
    ID              reduce using rule 32 (operacao -> subtracao .)
    NUMBER          reduce using rule 32 (operacao -> subtracao .)
    BOOLEAN         reduce using rule 32 (operacao -> subtracao .)
    STRING          reduce using rule 32 (operacao -> subtracao .)
    LPAREN          reduce using rule 32 (operacao -> subtracao .)
    CHAN            reduce using rule 32 (operacao -> subtracao .)
    $end            reduce using rule 32 (operacao -> subtracao .)
    RBRACE          reduce using rule 32 (operacao -> subtracao .)


state 24

    (33) operacao -> multiplicacao .

    LESSTHAN        reduce using rule 33 (operacao -> multiplicacao .)
    GREATERTHAN     reduce using rule 33 (operacao -> multiplicacao .)
    NOTEQUAL        reduce using rule 33 (operacao -> multiplicacao .)
    RPAREN          reduce using rule 33 (operacao -> multiplicacao .)
    IF              reduce using rule 33 (operacao -> multiplicacao .)
    WHILE           reduce using rule 33 (operacao -> multiplicacao .)
    ID              reduce using rule 33 (operacao -> multiplicacao .)
    NUMBER          reduce using rule 33 (operacao -> multiplicacao .)
    BOOLEAN         reduce using rule 33 (operacao -> multiplicacao .)
    STRING          reduce using rule 33 (operacao -> multiplicacao .)
    LPAREN          reduce using rule 33 (operacao -> multiplicacao .)
    CHAN            reduce using rule 33 (operacao -> multiplicacao .)
    $end            reduce using rule 33 (operacao -> multiplicacao .)
    RBRACE          reduce using rule 33 (operacao -> multiplicacao .)


state 25

    (34) operacao -> divisao .

    LESSTHAN        reduce using rule 34 (operacao -> divisao .)
    GREATERTHAN     reduce using rule 34 (operacao -> divisao .)
    NOTEQUAL        reduce using rule 34 (operacao -> divisao .)
    RPAREN          reduce using rule 34 (operacao -> divisao .)
    IF              reduce using rule 34 (operacao -> divisao .)
    WHILE           reduce using rule 34 (operacao -> divisao .)
    ID              reduce using rule 34 (operacao -> divisao .)
    NUMBER          reduce using rule 34 (operacao -> divisao .)
    BOOLEAN         reduce using rule 34 (operacao -> divisao .)
    STRING          reduce using rule 34 (operacao -> divisao .)
    LPAREN          reduce using rule 34 (operacao -> divisao .)
    CHAN            reduce using rule 34 (operacao -> divisao .)
    $end            reduce using rule 34 (operacao -> divisao .)
    RBRACE          reduce using rule 34 (operacao -> divisao .)


state 26

    (8) stmts -> stmts stmt .

    IF              reduce using rule 8 (stmts -> stmts stmt .)
    WHILE           reduce using rule 8 (stmts -> stmts stmt .)
    ID              reduce using rule 8 (stmts -> stmts stmt .)
    NUMBER          reduce using rule 8 (stmts -> stmts stmt .)
    BOOLEAN         reduce using rule 8 (stmts -> stmts stmt .)
    STRING          reduce using rule 8 (stmts -> stmts stmt .)
    LPAREN          reduce using rule 8 (stmts -> stmts stmt .)
    CHAN            reduce using rule 8 (stmts -> stmts stmt .)
    $end            reduce using rule 8 (stmts -> stmts stmt .)


state 27

    (5) bloco_SEQ -> SEQ stmts .
    (8) stmts -> stmts . stmt
    (9) stmt -> . atribuicao
    (10) stmt -> . comparacao
    (11) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (12) stmt -> . IF LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (13) stmt -> . IF LPAREN BOOLEAN RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (14) stmt -> . IF LPAREN comparacao RPAREN LBRACE single_stmt RBRACE ELSE LBRACE single_stmt RBRACE
    (17) stmt -> . WHILE LPAREN BOOLEAN RPAREN LBRACE stmt RBRACE
    (18) stmt -> . WHILE LPAREN comparacao RPAREN LBRACE stmt RBRACE
    (19) atribuicao -> . ID EQUAL expr
    (20) comparacao -> . expr LESSTHAN expr
    (21) comparacao -> . expr GREATERTHAN expr
    (22) comparacao -> . expr NOTEQUAL expr
    (23) expr -> . c_channel
    (24) expr -> . ID
    (25) expr -> . NUMBER
    (26) expr -> . operacao
    (27) expr -> . BOOLEAN
    (28) expr -> . STRING
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . LPAREN c_channel RPAREN
    (41) c_channel -> . CHAN ID : ID , ID
    (31) operacao -> . adicao
    (32) operacao -> . subtracao
    (33) operacao -> . multiplicacao
    (34) operacao -> . divisao
    (35) adicao -> . NUMBER PLUS NUMBER
    (36) adicao -> . ID PLUS ID
    (37) adicao -> . ID PLUS NUMBER
    (38) subtracao -> . NUMBER MINUS NUMBER
    (39) multiplicacao -> . NUMBER TIMES NUMBER
    (40) divisao -> . NUMBER DIVIDE NUMBER

    $end            reduce using rule 5 (bloco_SEQ -> SEQ stmts .)
    IF              shift and go to state 11
    WHILE           shift and go to state 14
    ID              shift and go to state 15
    NUMBER          shift and go to state 18
    BOOLEAN         shift and go to state 13
    STRING          shift and go to state 20
    LPAREN          shift and go to state 12
    CHAN            shift and go to state 21

    stmt                           shift and go to state 26
    atribuicao                     shift and go to state 9
    comparacao                     shift and go to state 10
    expr                           shift and go to state 16
    c_channel                      shift and go to state 17
    operacao                       shift and go to state 19
    adicao                         shift and go to state 22
    subtracao                      shift and go to state 23
    multiplicacao                  shift and go to state 24
    divisao                        shift and go to state 25

state 28
